issue #84: fixed test execution via maven