@@ -117,8 +117,10 @@
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <excludedGroups>skip</excludedGroups>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
                     <groups>${project.testing.tags}</groups>
-                    <argLine>@{argLine} ${project.testing.headless} ${project.testing.arguments}</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${project.testing.headless} ${project.testing.arguments}</argLine>
                 </configuration>
             </plugin>
             <plugin>
